# llm-chat-platform

llm-app-test/: .gitignore  Claude_Code_Guide.md  Makefile  PR_DESCRIPTION.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
llm-app-test/.github/workflows/: backend-ci.yml  deploy-azure.yml  e2e-tests.yml  frontend-ci.yml
llm-app-test/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
llm-app-test/backend/src/: main.py
llm-app-test/backend/src/api/v1/: auth.py  chat.py  dashboard.py  evaluation.py  llm.py  usecase.py
llm-app-test/backend/src/config/: database.py  redis.py  settings.py
llm-app-test/backend/src/core/: deps.py  middleware.py  security.py
llm-app-test/backend/src/models/: __init__.py  base.py  chat.py  evaluation.py  usecase.py  user.py
llm-app-test/backend/src/schemas/: base.py  llm.py  user.py
llm-app-test/backend/src/services/: __init__.py
llm-app-test/backend/src/services/llm/: __init__.py  anthropic_service.py  base.py  coordinator.py  google_service.py  openai_service.py
llm-app-test/backend/tests/: test_llm_services.py
llm-app-test/docs/: dir.md  idea.md
llm-app-test/frontend/: .env.example  .prettierrc  Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
llm-app-test/frontend/src/: App.tsx  index.css
llm-app-test/frontend/src/components/auth/: ProtectedRoute.tsx
llm-app-test/frontend/src/components/common/: Layout.tsx
llm-app-test/frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  SettingsPage.tsx
llm-app-test/frontend/src/services/api/: auth.ts  client.ts
llm-app-test/frontend/src/store/: index.ts
llm-app-test/frontend/src/store/slices/: authSlice.ts  chatSlice.ts  dashboardSlice.ts  evaluationSlice.ts  (+2 more)
llm-app-test/scripts/: init-db.sql  setup.sh
